--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>2.1.6.RELEASE</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
