--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>2.1.6.RELEASE</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
