--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-app.environment=dev
+app.environment=prod
+logging.file.name=watchlist-app.log
+
+info.app.name=Watchlist
+info.app.description=A must have for any movie freak!
+info.app.version=1.0.0
+
+management.endpoints.web.exposure.include=info,health,beans,env,metrics,httptrace,release-notes
