--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,31 @@ info.app.name=Watchlist
 info.app.description=A must have for any movie freak!
 info.app.version=1.0.0
 
+# spring.data.mongodb.authentication-database=admin
+# spring.data.mongodb.username=prakash
+# spring.data.mongodb.password=5e2zXWtYs746w2WR
+# spring.data.mongodb.database=watchlist
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.host=spring-boot.meibq.mongodb.net
+
+spring.data.mongodb.uri=mongodb+srv://prakash:8PuH6xztJODOu7Pk@spring-boot.meibq.mongodb.net/watchlist?retryWrites=true&w=majority
+
+
 management.endpoints.web.exposure.include=info,health,beans,env,metrics,httptrace,release-notes
+
+# # The format used for the keystore. It could be set to JKS in case it is a JKS file
+# server.ssl.key-store-type=PKCS12
+# # The path to the keystore containing the certificate
+# server.ssl.key-store=classpath:keystore/baeldung.p12
+# # The password used to generate the certificate
+# server.ssl.key-store-password=PR_1996
+# # The alias mapped to the certificate
+# server.ssl.key-alias=baeldung
+
+# server.ssl.enabled=true
+
+
+# #trust store location
+# trust.store=classpath:keystore/baeldung.p12
+# #trust store password
+# trust.store.password=PR_1996
