--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
                         client-secret: h7WXAIVywfXAI-qV15P6U5tHvRH58x3wt_HpXgQc
                         redirect-uri: http://localhost:8080/login/oauth2/code/okta
                         scope: openid
+
+                    github:
+                        clientId: d3fdb28d92151af58d02
+                        clientSecret: b92431987ee89bfa7e7aba5583b25d3fc0f2eb6e
+                        
                 provider:
                     okta:
                         issuer-uri: https://dev-1397934.okta.com/oauth2/default
